--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">DummyDictionary</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_word_text">Add word</string>
+    <string name="new_word_text">Add new word</string>
+    <string name="word_text">Word</string>
+    <string name="definition_text">Definition</string>
 </resources>
